--- a/Mat_Sum.ipynb
+++ b/Mat_Sum.ipynb
@@ -49,11 +49,10 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
         "id": "lHYpi_WimWXZ",
-        "outputId": "c34cf69a-2e91-49ff-b14b-65b7a717f387"
+        "outputId": "bd6c97d1-6276-43ea-b3ca-aba80291da8f"
       },
       "source": [
         "import numpy as np\n",
@@ -70,72 +69,30 @@
         "                c[i][j]=a[i][j]+b[i][j]\n",
         "        return c\n",
         "\n",
-        "m1 = np.random.rand(5,3)\n",
+        "m1 = np.random.rand(5,4)\n",
         "m2 = np.random.rand(5,4)\n",
         "\n",
         "mat_sum(m1,m2)"
       ],
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
-              "'wrong dimentions'"
+              "array([[1.53258913, 1.28590377, 0.41020812, 0.88436001],\n",
+              "       [1.63690511, 0.94150729, 0.99193717, 1.76321864],\n",
+              "       [1.82452491, 0.79772149, 0.3342039 , 0.65207409],\n",
+              "       [0.72948762, 0.43869617, 0.90817594, 1.00862277],\n",
+              "       [1.29259422, 1.19555368, 1.09956627, 1.28750679]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 2
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "Rup51B5InNGj",
-        "outputId": "e7c49ebe-66b9-4719-839f-8c4ff3e01e52"
-      },
-      "source": [
-        "mat_sum.__doc__"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'takes two matrices as input and returns the sum of them'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 11
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ggtMMQLDnZPl"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
