--- a/pig_latin.ipynb
+++ b/pig_latin.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "pig_latin.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMz4Rd191+ckBiRbVgIwXpC",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN2nT1eD5tlWMreBFNxqYOT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +26,35 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/vishnuvardhan-jadava/MySpace/blob/main/pig_latin.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kN6g_WxyJJON"
+      },
+      "source": [
+        "\n",
+        "1. Simplified Pig Latin \n",
+        "Pig Latin is a pseudo-language or ALL language game used by young children as a fun way to confuse people unfamiliar with Pig Latin. In this game 0 English words are altered, usually by adding a fabricated suffix or by moving the onset or initial consonant or consonant cluster of a word to the end of the word and adding a vocalic syllable to create such a suffix. \n",
+        "\n",
+        "Rulel: Words beginning with consonants. To form Pig Latin words from words beginning with a consonant (like hello) or a consonant cluster (like switch), simply move the consonant or consonant cluster from the start of the word to the end of the word. Then add the suffix \"-ay\" to the end of the word. Here from hello h is moved to the end and av is added after that. . Type here to search \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ySBFlcXGJtfD"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "1.   if a word starts with VOWEL, it shd end with that word and yay.Eg:    for 'if', piglatin should be 'if-yay'.\n",
+        "\n",
+        "2.   if a word has with VOWEL, 'hello', piglatin should be 'ello-hay'.\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -65,32 +95,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kN6g_WxyJJON"
-      },
-      "source": [
-        "\n",
-        "1. Simplified Pig Latin \n",
-        "Pig Latin is a pseudo-language or ALL language game used by young children as a fun way to confuse people unfamiliar with Pig Latin. In this game 0 English words are altered, usually by adding a fabricated suffix or by moving the onset or initial consonant or consonant cluster of a word to the end of the word and adding a vocalic syllable to create such a suffix. \n",
-        "\n",
-        "Rulel: Words beginning with consonants. To form Pig Latin words from words beginning with a consonant (like hello) or a consonant cluster (like switch), simply move the consonant or consonant cluster from the start of the word to the end of the word. Then add the suffix \"-ay\" to the end of the word. Here from hello h is moved to the end and av is added after that. . Type here to search \n",
-        "\n",
-        "16 11 12 13 14 15 16 17 \n",
-        "Test \n",
-        "11 \n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ySBFlcXGJtfD"
-      },
-      "source": [
-        "if a word starts with VOWE"
       ]
     }
   ]
